<resources>
    <string name="app_name">mianshi</string>
    <string name="recycleitemtitle">recycleItemTitle</string>
    <string name="login">登录</string>
    <string name="regist">注册</string>
    <string name="version">版本</string>
    <string name="user_name">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="logo">用户头像</string>
    <string name="icon_market">市场</string>
    <string name="home_icon">Home</string>
    <string name="icon_music">Musci</string>
    <string name="icon_movie">Movie</string>
</resources>
